# Wanderland

./: .gitignore  CMakeLists.txt
include/Wonderland/App/: Application.hpp  Client.h
include/Wonderland/Entities/: Entity.hpp  Item.h
include/Wonderland/Scenes/: Scene.hpp  SceneManager.h  StackSceneManager.h
include/Wonderland/Utilities/: SetOrigin.hpp
include/Wonderland/Widgets/: Label.h  Widget.hpp
src/: Application.cpp  Main.cpp
src/App/: Client.cpp
src/Entities/: Item.cpp
src/Scenes/: SceneManager.cpp  StackSceneManager.cpp
src/Widgets/: Label.cpp
